<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.texttechnologylab.duui</groupId>
    <artifactId>duui-suprisal</artifactId>
    <version>0.1</version>

    <licenses>
        <license>
            <name>AGPL-3.0-or-later</name>
            <url>https://www.gnu.org/licenses/agpl.txt</url>
            <distribution>repo</distribution>
            <comments>GNU Affero General Public License v3.0 or later</comments>
        </license>
    </licenses>

    <organization>
        <name>Texttechnology Lab</name>
        <url>https://www.texttechnologylab.org</url>
    </organization>
    <developers>
        <developer>
            <id>mehler</id>
            <name>Prof. Dr. Alexander Mehler</name>
            <email>mehler@em.uni-frankfurt.de</email>
            <url>https://www.texttechnologylab.org/team/alexander-abrami/</url>
            <organization>Goethe University Frankfurt / Texttechnology Lab</organization>
            <organizationUrl>https://www.texttechnologylab.org</organizationUrl>
            <roles>
                <role>head of department</role>
            </roles>
        </developer>
        <developer>
            <id>abrami</id>
            <name>Giuseppe Abrami</name>
            <email>abrami@em.uni-frankfurt.de</email>
            <url>https://www.texttechnologylab.org/team/giuseppe-abrami/</url>
            <organization>Goethe University Frankfurt / Texttechnology Lab</organization>
            <organizationUrl>https://www.texttechnologylab.org</organizationUrl>
            <roles>
                <role>lead developer</role>
            </roles>
            <timezone>Europe/Berlin</timezone>
        </developer>
        <developer>
            <id>martinezbruera</id>
            <name>Mercedes Martinez Bruera</name>
            <email>MartinezBruera@em.uni-frankfurt.de</email>
            <url>https://mercedesmbruera.github.io</url>
            <organization>Goethe University Frankfurt</organization>
            <organizationUrl>https://www.neglab.de</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>Europe/Berlin</timezone>
        </developer>
    </developers>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                        --add-opens java.base/java.util=ALL-UNNAMED
                        <!--                        add-opens for use in JUnit-Tests...-->
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>


    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <dkpro.core.version>2.5.0</dkpro.core.version>
        <typesystem.version>a64b9062da</typesystem.version>
<!--        <typesystem.version>3.0.14</typesystem.version>-->
        <utilities.version>653a6a0850</utilities.version>
        <duui.version>1.5.3</duui.version>
        <uima.version>3.6.0</uima.version>
    </properties>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>


        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>uimaj-core</artifactId>
            <version>${uima.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>uimafit-core</artifactId>
            <version>${uima.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>uimaj-json</artifactId>
            <version>${uima.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.uima/uimaj-tools -->
        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>uimaj-tools</artifactId>
            <version>${uima.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.texttechnologylab</groupId>
            <artifactId>UIMATypeSystem</artifactId>
            <version>${typesystem.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.texttechnologylab</groupId>
            <artifactId>DockerUnifiedUIMAInterface</artifactId>
            <version>${duui.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.texttechnologylab</groupId>
            <artifactId>Utilities</artifactId>
            <version>${utilities.version}</version>
        </dependency>

        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-io-xmi-asl</artifactId>
            <version>2.4.0</version>
        </dependency>

    </dependencies>
</project>
